syntax = "proto3";

package com.itspawan.protobuf;

message DynamicSchema {
    repeated string rhsColumns = 1;
    repeated string lhsColumns = 2;
    repeated string selectableColumns = 3;

    enum Operation {
        EQUAL = 0;
        NOT_EQUAL = 1;
        IS_NULL = 2;
        IS_NOT_NULL = 3;
    }

    message JoinCondition {
        string lhsColumn = 1;
        string rhsColumn = 2;
        string rhsValue = 3;
        string lhsValue = 4;
        Operation operation = 5;
    }

    message AndCondition {
        repeated JoinCondition conditions = 1;
    }

    message OrCondition {
        repeated JoinCondition conditions = 1;
    }

    AndCondition andCondition = 4;
    OrCondition orCondition = 5;
    repeated JoinCondition conditions = 6;
}